force-app/main/default/objects/Jun_Job_Posting__c/Jun_Job_Posting__c.object-meta.xml
<CustomObject>
    <description>Junction object for Many to many relationship</description>
    <label>Junction Job Posting</label>
    <nameField>
        <label>Junction Job Posting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>