force-app/main/default/objects/Jun_Job_Posting__c/fields/JobPosting__c.field-meta.xml
<CustomField>
    <fullName>JobPosting__c</fullName>
    <label>JobPosting</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Job Postings</relationshipLabel>
    <relationshipName>Job_Postings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>