force-app/main/default/objects/Jun_Job_Posting__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Record Name</label>
    <type>AutoNumber</type>
</CustomField>